finishes the banner section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hero Travel</title>
+    <link rel="stylesheet" href="styles/travel.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <h3 class="section-title">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <div>Hero <span class="travel">Travel</span></div>
+            </h3>
+            <ul>
+                <li><a href=""><span class="home">Home</span></a></li>
+                <li><a href="">Packages</a></li>
+                <li><a href="">Testimonial</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <h3 class="banner-title">Explore Your Travel</h3>
+            <p class="banner-description">Travel is the movement of people between distant geographical locations.
+                Travel can be done by foot,
+                bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and can
+                be one way or round trip.</p>
+            <div class="info">
+                <input class="go" type="text" name="" id="" placeholder="Where go">
+                <label for="When">
+                    <select class="when" name="When" id="" placeholder="When">
+                        <option value="">When</option>
+                    </select>
+                </label>
+                <label for="">
+                    <select class="type" name="" id="">
+                        <option value="">Select type</option>
+                    </select>
+                </label>
+                <button class="search">Find Now</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="tour">
+            <div class="tour-container">
+                <h3 class="tour-title">Our Popular Tours</h3>
+                <p class="tour-description">Prepare to experience Bangladesh's rich culture and explore the majestic
+                    beauties of Cox’s Bazar, Sylhet, Bandarban, Sajek Valley, Rangamati etc. Plan your trip now!</p>
+                <ul>
+                    <li>Bangladesh is a land of natural beauty. It has a wealth of natural resources. The coastline of
+                        Bangladesh along the Bay of Bengal is indeed very beautiful. The sea beach in Cox’s Bazar is
+                        considered the longest sea beach on earth.</li>
+                    <li>Every year thousands of tourists from all over the world come to this sea beach for having a
+                        vacation. It was the month of February. The classes of our eighth year of school had just
+                        started. </li>
+                    <li>he students of our class decided to have an excursion to Cox’s Bazar, the famous sea beach of
+                        Bangladesh.</li>
+                </ul>
+                <p class="tour-description">The sun setting in the sea was a memorable sight. After the sunset, we
+                    started our return journey. It was indeed a pleasant event in my life. This pleasant memory of the
+                    excursion will remain even fresh in my mind.</p>
+                <button class="read">Read More</button>
+            </div>
+            <img src="Images/Rectangle 4.png" alt="">
+        </section>
+    </main>
+    <footer>
 
+    </footer>
 </body>
 
 </html>
