image container done

--- a/index.html
+++ b/index.html
@@ -72,6 +72,60 @@
             </div>
             <img src="Images/Rectangle 4.png" alt="">
         </section>
+        <section>
+            <div class="destination">
+                <h3 class="tour-title">Choose Your Destination</h3>
+                <p class="tour-description">Travel is the movement of people between distant geographical locations.
+                    Travel can be done by foot,
+                    bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and
+                    can be one way or round trip.</p>
+            </div>
+            <section class="img-container">
+                <div class="row">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <img src="Images/Rectangle 8.png" alt="">
+                </div>
+                <div class="row mid">
+                    <img src="Images/Rectangle 6.png" alt="">
+                    <img src="Images/Rectangle 7.png" alt="">
+                    <img src="Images/Rectangle 9.png" alt="">
+                </div>
+                <div class="row">
+                    <img src="Images/Rectangle 11.png" alt="">
+                    <img src="Images/Rectangle 10.png" alt="">
+                </div>
+            </section>
+        </section>
+        <section class="choose">
+            <h3 class="tour-title">Why Choose Us</h3>
+            <p class="tour-description">Travel is the movement of people between distant geographical locations.
+                Travel can be done by foot,
+                bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and
+                can be one way or round trip.</p>
+        </section>
+        <section>
+            <div class="card">
+                <img src="Images/hotel.png" alt="" width="64px">
+                <h3>Handpicked Hotels</h3>
+                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                    in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
+                    Customer Service. Online Hotel Booking. Discount & Deals.</p>
+            </div>
+            <div class="card">
+                <img src="Images/map.png" alt="" width="64px">
+                <h3>Handpicked Hotels</h3>
+                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                    in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
+                    Customer Service. Online Hotel Booking. Discount & Deals.</p>
+            </div>
+            <div class="card">
+                <img src="Images/discount.png" alt="" width="64px">
+                <h3>Handpicked Hotels</h3>
+                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                    in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
+                    Customer Service. Online Hotel Booking. Discount & Deals.</p>
+            </div>
+        </section>
     </main>
     <footer>
 
