card section done

--- a/index.html
+++ b/index.html
@@ -103,25 +103,31 @@
                 bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and
                 can be one way or round trip.</p>
         </section>
-        <section>
-            <div class="card">
+        <section class="card-content">
+            <div class="card-1">
                 <img src="Images/hotel.png" alt="" width="64px">
-                <h3>Handpicked Hotels</h3>
-                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                <h3 class="card-title">Handpicked Hotels</h3>
+                <p class="card-des">Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All
+                    Bookings. Headquartered
                     in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
                     Customer Service. Online Hotel Booking. Discount & Deals.</p>
             </div>
-            <div class="card">
+            <div class="card-2">
                 <img src="Images/map.png" alt="" width="64px">
-                <h3>Handpicked Hotels</h3>
-                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                <h3 class="card-title">World Class Service</h3>
+                <p class="card-des">Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All
+                    Bookings. Headquartered
                     in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
                     Customer Service. Online Hotel Booking. Discount & Deals.</p>
             </div>
+        </section>
+        <section class="card-cont">
             <div class="card">
                 <img src="Images/discount.png" alt="" width="64px">
-                <h3>Handpicked Hotels</h3>
-                <p>Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All Bookings. Headquartered
+                <h3 class="card-title">Best Price Guarantee</h3>
+                <p class="card-des">Your perfect getaway doesn't have to be expensive. Flash Sale 50% Off on All
+                    Bookings.
+                    Headquartered
                     in Singapore, Agoda employs more than 4,000 staff in 30 countries. Always At Your Service. 24/7
                     Customer Service. Online Hotel Booking. Discount & Deals.</p>
             </div>
