--- a/index.html
+++ b/index.html
@@ -132,9 +132,47 @@
                     Customer Service. Online Hotel Booking. Discount & Deals.</p>
             </div>
         </section>
+        <div class="blog">
+            <h3 class="tour-title">Latest Travel Blogs</h3>
+        </div>
+        <section class="blog-content">
+            <div class="blog-content1">
+                <img src="Images/pic1.jpg" alt="">
+                <p class="tour-des">For Booking Karnafuly Ship Ticket: 01766990725 (Dhaka Agent) Two-way ticket
+                    price with Coach Code –
+                    MV Karnafuly Express Cox’s Bazar to Saint Martin Island Ship</p>
+                <button class="read">Read More</button>
+            </div>
+            <div class="blog-content2">
+                <img src="Images/pc2.jpg" alt="">
+                <p class="tour-des">For Booking Karnafuly Ship Ticket: 01766990725 (Dhaka Agent) Two-way ticket
+                    price with Coach Code –
+                    MV Karnafuly Express Cox’s Bazar to Saint Martin Island Ship</p>
+                <button class="read">Read More</button>
+            </div>
+        </section>
+        <section class="subscrib">
+            <div class="news">
+                <h3 class="letter">Newsletter</h3>
+                <p class="tour-desc">Get your daily dose of travel news & tips. Sign up today!</p>
+                <hr>
+                <input class="name" type="text" name="" id="" placeholder="Enter your name">
+                <br>
+                <br>
+                <input class="email" type="email" name="" id="" placeholder="Enter your email">
+                <br>
+                <br>
+                <button class="submit">Submit</button>
+            </div>
+            <img src="Images/Rectangle 8 (1).png" alt="">
+        </section>
     </main>
     <footer>
-
+        <section class="footer-content">
+            <h3 class="section-title"><img src="Images/Group 40071 (2).png" alt="">
+                <div>Hero <span class="travel">Travel</span></div>
+            </h3>
+        </section>
     </footer>
 </body>
 
