--- a/index.html
+++ b/index.html
@@ -165,13 +165,28 @@
                 <button class="submit">Submit</button>
             </div>
             <img src="Images/Rectangle 8 (1).png" alt="">
+            <div class="discount-badge">
+                <h2>Travel.com</h2>
+                <p>Save up to 70%</p>
+            </div>
         </section>
     </main>
     <footer>
         <section class="footer-content">
-            <h3 class="section-title"><img src="Images/Group 40071 (2).png" alt="">
+            <h3 class="footer-title"><img src="Images/Group 40071 (2).png" alt="">
                 <div>Hero <span class="travel">Travel</span></div>
             </h3>
+            <p class="footer-description">Travel is the movement of people between distant geographical locations.
+                Travel can be done by foot,
+                bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and
+                can be one way or round trip.</p>
+            <div class="footer-img">
+                <img src="Images/Facebook.png" alt="">
+                <img src="Images/Instagram.png" alt="">
+                <img src="Images/Linkedin.png" alt="">
+            </div>
+            <hr>
+            <h4 class="right">2017, All Rights Reserved.</h4>
         </section>
     </footer>
 </body>
