--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <h3 class="banner-title">Explore Your Travel</h3>
+            <p class="banner-title">Explore Your Travel</p>
             <p class="banner-description">Travel is the movement of people between distant geographical locations.
                 Travel can be done by foot,
                 bicycle, automobile, train, boat, bus, airplane, ship or other means, with or without luggage, and can
@@ -165,10 +165,6 @@
                 <button class="submit">Submit</button>
             </div>
             <img src="Images/Rectangle 8 (1).png" alt="">
-            <div class="discount-badge">
-                <h2>Travel.com</h2>
-                <p>Save up to 70%</p>
-            </div>
         </section>
     </main>
     <footer>
